# nes-emu

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildclean
.github/workflows/: release.yml
docs/: 6502 CPU.md  NES PPU.md  Syncronisation.md
include/: AddressResolveInfo.h  Bus.h  BusInterface.h  CPU.h  Cartridge.h  Clock.h  Constants.h  Logger.h  MMU.h  NES.h  OpCode.h  TestBus.h
include/CPU/: AddressResolveInfo.h  CPU.h  CPUState.h  OpCode.h  ParallelCPU.h
include/PPU/: AddrRegister.h  BitmaskRegs.h  Frame.h  PPU.h  PPUAddr.h
include/PPU/Registers/: PPUAddr.h  PPUCtrl.h  PPUMask.h  PPUScroll.h  PPUStatus.h
include/Renderer/: Frame.h  Palette.h  Renderer.h
logs/: cmplogs.sh
src/: CPU.cpp  Cartridge.cpp  Clock.cpp  Emulator.cpp  Logger.cpp  MMU.cpp  OpCode.cpp
src/CPU/: CPU.cpp  OpCode.cpp  ParallelCPU.cpp
src/PPU/: AddrRegister.cpp  PPU.cpp  PPUAddr.cpp
src/PPU/Registers/: PPUAddr.cpp
src/Renderer/: Frame.cpp  Renderer.cpp
test_roms/: prg_rom
tests/: CPU_test.cpp  NestestTrace.h
tests/CPU/: CPU_Harte.cpp  CPU_Nestest.cpp  CPU_Parameterised.cpp  CPU_arithmetic_test.cpp  CPU_branching_test.cpp  CPU_compare_test.cpp  CPU_control_test.cpp  CPU_core_test.cpp  CPU_flag_test.cpp  CPU_loadstore_test.cpp  CPU_logical_test.cpp  CPU_shiftrotate_test.cpp  CPU_transferstack_test.cpp
tests/CPU/archived_custom_tests/: CPU_arithmetic_test.cpp  CPU_branching_test.cpp  CPU_compare_test.cpp  CPU_control_test.cpp  CPU_core_test.cpp  CPU_flag_test.cpp  CPU_loadstore_test.cpp  CPU_logical_test.cpp  CPU_shiftrotate_test.cpp  CPU_transferstack_test.cpp
tests/CPU/nes6502_harte/: README.md
tests/PPU/: PPU_Nestest.cpp  PPU_SpriteZero.cpp  PPU_Timing.cpp  PPU_core_logic_test.cpp
